--- a/Template/index.html
+++ b/Template/index.html
@@ -14,10 +14,10 @@
 							<a href="#" class="primary-btn text-uppercase">discover now</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
-							<img class="img-fluid" src="{% static 'img/hero-img.png' %}" alt="">
+							<img class="img-fluid" src="img/hero-img.png" alt="">
 						</div>
 					</div>
-				</div>					
+				</div>
 			</section>
 			<!-- End banner Area -->
 
@@ -26,7 +26,7 @@
 				<div class="container">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 home-about-left">
-							<img class="img-fluid" src="{% static 'img/about-img.png' %}" alt="">
+							<img class="img-fluid" src="img/about-img.png" alt="">
 						</div>
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h6>About Me</h6>
@@ -37,7 +37,7 @@
 							<a href="#" class="primary-btn text-uppercase">View Full Details</a>
 						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<!-- End home-about Area -->
 
@@ -51,70 +51,27 @@
 		                        <p>At about this time of year, some months after New Year’s resolutions have been made and kept, or made and neglected.</p>
 		                    </div>
 		                </div>
-		            </div>						
+		            </div>
 					<div class="row">
+						{% for service in services %}
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-pie-chart"></span>
-								<a href="#"><h4>Web Design</h4></a>
+								<span class="lnr lnr-{{service.icon}}"></span>
+								<a href="#"><h4>{{service.name}}</h4></a>
 								<p>
-									“It is not because things are difficult that we do not dare; it is because we do not dare that they are difficult.”
+									{{service.description}}
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-laptop-phone"></span>
-								<a href="#"><h4>Web Development</h4></a>
-								<p>
-									If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions.
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-camera"></span>
-								<a href="#"><h4>Photography</h4></a>
-								<p>
-									Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills.
-								</p>
-							</div>	
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-picture"></span>
-								<a href="#"><h4>Clipping Path</h4></a>
-								<p>
-									Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last two decades. There is a lot of argument.
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-tablet"></span>
-								<a href="#"><h4>Apps Interface</h4></a>
-								<p>
-									Do you sometimes have the feeling that you’re running into the same obstacles over and over again? Many of my conflicts.
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr lnr-rocket"></span>
-								<a href="#"><h4>Graphic Design</h4></a>
-								<p>
-									You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true, however, ‘believing’ is not just thinking that.
-								</p>
-							</div>				
-						</div>														
+						{% endfor %}
 					</div>
-				</div>	
+				</div>
 			</section>
-			<!-- End services Area -->	
+			<!-- End services Area -->
 
 			<!-- Start fact Area -->
 			<section class="facts-area section-gap" id="facts-area">
-				<div class="container">				
+				<div class="container">
 					<div class="row">
 						<div class="col-lg-3 col-md-6 single-fact">
 							<h1 class="counter">2536</h1>
@@ -127,15 +84,15 @@
 						<div class="col-lg-3 col-md-6 single-fact">
 							<h1 class="counter">2239</h1>
 							<p>Cups of Coffee</p>
-						</div>	
+						</div>
 						<div class="col-lg-3 col-md-6 single-fact">
 							<h1 class="counter">435</h1>
 							<p>Real Professionals</p>
-						</div>												
+						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
-			<!-- end fact Area -->	
+			<!-- end fact Area -->
 
 			<!-- Start portfolio-area Area -->
             <section class="portfolio-area section-gap" id="portfolio">
@@ -148,7 +105,7 @@
 		                    </div>
 		                </div>
 		            </div>
-                    
+
                     <div class="filters">
                         <ul>
                             <li class="active" data-filter="*">All</li>
@@ -158,7 +115,7 @@
                             <li data-filter=".printing">Printing</li>
                         </ul>
                     </div>
-                    
+
                     <div class="filters-content">
                         <div class="row grid">
                             <div class="single-portfolio col-sm-4 all vector">
@@ -167,16 +124,16 @@
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="img/p1.jpg" alt="">
 	                            	</div>
-									<a href="img/p1.jpg" class="img-pop-up">	
+									<a href="img/p1.jpg" class="img-pop-up">
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 									  </div>
-								</a>                              		
+								</a>
                             	</div>
 								<div class="p-inner">
 								    <h4>2D Vinyl Design</h4>
 									<div class="cat">vector</div>
-								</div>					                               
+								</div>
                             </div>
                             <div class="single-portfolio col-sm-4 all raster">
                             	<div class="relative">
@@ -184,29 +141,29 @@
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="img/p2.jpg" alt="">
 	                            	</div>
-									<a href="img/p2.jpg" class="img-pop-up">	
+									<a href="img/p2.jpg" class="img-pop-up">
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 									  </div>
-								</a>                              		
+								</a>
                             	</div>
 								<div class="p-inner">
 								    <h4>2D Vinyl Design</h4>
 									<div class="cat">vector</div>
-								</div>					                               
-                            </div>                            
+								</div>
+                            </div>
                             <div class="single-portfolio col-sm-4 all ui">
                             	<div class="relative">
 	                            	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="img/p3.jpg" alt="">
 	                            	</div>
-									<a href="img/p3.jpg" class="img-pop-up">	
+									<a href="img/p3.jpg" class="img-pop-up">
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 									  </div>
-									</a> 
-	                            		
+									</a>
+
 	                           	</div>
                                 <div class="p-inner">
                                     <h4>Creative Poster Design</h4>
@@ -219,12 +176,12 @@
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="img/p4.jpg" alt="">
 	                            	</div>
-									<a href="img/p4.jpg" class="img-pop-up">	
+									<a href="img/p4.jpg" class="img-pop-up">
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 									  </div>
-									</a>                            		
-                            	</div> 
+									</a>
+                            	</div>
                                 <div class="p-inner">
                                     <h4>Embosed Logo Design</h4>
                                     <div class="cat">Portal</div>
@@ -236,11 +193,11 @@
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="img/p5.jpg" alt="">
 	                            	</div>
-									<a href="img/p5.jpg" class="img-pop-up">	
+									<a href="img/p5.jpg" class="img-pop-up">
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 									  </div>
-									</a>                             		
+									</a>
                             	</div>
                                 <div class="p-inner">
                                     <h4>3D Helmet Design</h4>
@@ -253,11 +210,11 @@
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="img/p6.jpg" alt="">
 	                            	</div>
-									<a href="img/p6.jpg" class="img-pop-up">	
+									<a href="img/p6.jpg" class="img-pop-up">
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 									  </div>
-									</a>                             		
+									</a>
                             	</div>
                                 <div class="p-inner">
                                     <h4>2D Vinyl Design</h4>
@@ -266,10 +223,10 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </section>
-            <!-- End portfolio-area Area -->	
+            <!-- End portfolio-area Area -->
 
 			<!-- Start testimonial Area -->
 		    <section class="testimonial-area section-gap">
@@ -284,36 +241,26 @@
 		            </div>
 		            <div class="row">
 		                <div class="active-testimonial">
+							{% for feedback in feedbacks %}
 		                    <div class="single-testimonial item d-flex flex-row">
 		                        <div class="thumb">
-		                            <img class="img-fluid" src="img/elements/user1.png" alt="">
+		                            <img class="img-fluid" src="{{feedback.image}}" style = "height: 50px; width:50px;" alt="">
 		                        </div>
 		                        <div class="desc">
 		                            <p>
-		                                Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.		     
+		                                {{feedback.comment}}
 		                            </p>
-		                            <h4>Harriet Maxwell</h4>
-		                            <p>CEO at Google</p>
+		                            <h4>{{feedback.name}}</h4>
+		                            <p>{{feedback.post}}</p>
 		                        </div>
 		                    </div>
-		                    <div class="single-testimonial item d-flex flex-row">
-		                        <div class="thumb">
-		                            <img class="img-fluid" src="img/elements/user2.png" alt="">
-		                        </div>
-		                        <div class="desc">
-		                            <p>
-		                                A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.
-		                            </p>
-		                            <h4>Carolyn Craig</h4>
-		                            <p>CEO at Facebook</p>
-		                        </div>
-		                    </div>
+		                   {% endfor %}
 		                </div>
 		            </div>
 		        </div>
 		    </section>
 		    <!-- End testimonial Area -->
-		
+
 			<!-- Start price Area -->
 			<section class="price-area section-gap">
 				<div class="container">
@@ -324,7 +271,7 @@
 								<p>When someone does something that they know that they shouldn’t do, did they.</p>
 							</div>
 						</div>
-					</div>					
+					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-6 single-price">
 							<div class="top-part">
@@ -397,12 +344,12 @@
 								<h1>£499.00</h1>
 								<a class="price-btn text-uppercase" href="#">Buy Now</a>
 							</div>
-						</div>																		
+						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
-			<!-- End price Area -->			
-	
+			<!-- End price Area -->
+
 			<!-- Start recent-blog Area -->
 			<section class="recent-blog-area section-gap">
 				<div class="container">
@@ -414,10 +361,10 @@
 							</p>
 						</div>
 					</div>
-					<div class="row">	
+					<div class="row">
 						<div class="single-recent-blog col-lg-4 col-md-4">
 							<div class="thumb">
-								<img class="f-img img-fluid mx-auto" src="img/b1.jpg" alt="">	
+								<img class="f-img img-fluid mx-auto" src="img/b1.jpg" alt="">
 							</div>
 							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 								<div>
@@ -429,7 +376,7 @@
 									<span class="lnr lnr-heart"></span> 15
 									<span class="lnr lnr-bubble"></span> 04
 								</div>
-							</div>							
+							</div>
 							<a href="#">
 								<h4>Break Through Self Doubt
 								And Fear</h4>
@@ -440,7 +387,7 @@
 						</div>
 						<div class="single-recent-blog col-lg-4 col-md-4">
 							<div class="thumb">
-								<img class="f-img img-fluid mx-auto" src="img/b2.jpg" alt="">	
+								<img class="f-img img-fluid mx-auto" src="img/b2.jpg" alt="">
 							</div>
 							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 								<div>
@@ -452,7 +399,7 @@
 									<span class="lnr lnr-heart"></span> 15
 									<span class="lnr lnr-bubble"></span> 04
 								</div>
-							</div>							
+							</div>
 							<a href="#">
 								<h4>Portable Fashion for
 								young women</h4>
@@ -463,7 +410,7 @@
 						</div>
 						<div class="single-recent-blog col-lg-4 col-md-4">
 							<div class="thumb">
-								<img class="f-img img-fluid mx-auto" src="img/b3.jpg" alt="">	
+								<img class="f-img img-fluid mx-auto" src="img/b3.jpg" alt="">
 							</div>
 							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 								<div>
@@ -475,7 +422,7 @@
 									<span class="lnr lnr-heart"></span> 15
 									<span class="lnr lnr-bubble"></span> 04
 								</div>
-							</div>							
+							</div>
 							<a href="#">
 								<h4>Do Dreams Serve As
 								A Premonition</h4>
@@ -483,13 +430,13 @@
 							<p>
 								So many of us are demotivated to achieve anything. Such people are not enthusiastic about anything. They don’t want to work involved.
 							</p>
-						</div>												
-											
-												
+						</div>
+
+
 					</div>
-				</div>	
+				</div>
 			</section>
-			<!-- end recent-blog Area -->		
+			<!-- end recent-blog Area -->
 
 		    <!-- Start brands Area -->
 		    <section class="brands-area">
@@ -515,6 +462,6 @@
 		            </div>
 		        </div>
 		    </section>
-		    <!-- End brands Area -->			
+		    <!-- End brands Area -->
 
 {% endblock %}
